# moos-ivp-kosCharisis

missions/alder/: alder.bhv  alder.moos
missions/lab_04/alpha/: alpha.bhv  alpha.moos
missions/lab_04_exer/s2_alpha/: alpha.bhv  alpha.moos
missions/lab_04_exer/s4_alpha/: alpha.moos
missions/lab_04_exer/s5_alpha/: alpha.bhv  alpha.moos
missions/lab_05/bravo_loiter/: bravo.bhv  bravo.moos
missions/lab_05/bravo_loiter_dbl/: bravo.bhv
missions/lab_05/bravo_loiter_uuv/: bravo.bhv
missions/lab_05/bravo_loiter_uuv_surface/: bravo.bhv  bravo.moos
missions/lab_06/s15_alpha_pshare/: alpha.bhv  alpha.moos  bravo.moos  launch.sh  shoreside.moos
missions/lab_06/s16_alpha_pshare/: alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_06/s18_henry_gilda_refuel/: meta_vehicle.bhv
missions/lab_06/s19_henry_gilda_auto_refuel/: meta_vehicle.bhv
missions/lab_06/s20_henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_07/distributed_tsp/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pLogger.moos  plug_uSimMarineV22.moos
missions/lab_11/charlie_dana_message/: meta_shoreside.moos  vspeeds.txt
src/: CMakeLists.txt
src/lib_behaviors-test/: CMakeLists.txt
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h
src/pOdometry/: Odometry.cpp  Odometry.h
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+3 files in other folders)
